--- a/second-level/application-dev.yml
+++ b/second-level/application-dev.yml
@@ -1,4 +1,9 @@
 spring:
+   mvc:
+      view:
+         prefix: /WEB-INF/jsp/
+         suffix: .jsp
+         
    datasource:
       url: jdbc:postgresql://localhost:5432/postgres
       platform: postgres
@@ -16,3 +21,5 @@ spring:
 
 server:
    port: 8080
+
+
